# NightPlug

./: .gitignore  AGENTS.md  HARDWARE.md  README.md  pyproject.toml
.github/: README.md
scripts/: demo.ps1
src/nightplug/: __init__.py  __main__.py  cli.py  config.py  features.py  ingest.py  logger.py  models.py  report.py  scoring.py  session.py  simulate.py  sync.py  webui.py
src/nightplug/web/: dashboard.html
