[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nightplug"
version = "0.1.0"
description = "Contactless sleep clinic in a plug — personal RF sleep reports"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Vikas Sharma" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
nightplug = "nightplug.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nightplug = ["py.typed"]
